Fixed failing tests